--- a/mono/index.html
+++ b/mono/index.html
@@ -16,9 +16,48 @@
   
 	<header>
 		<div class="container header-container">
-		
+			<div class="container header-center-container">
+				<div class="container header-inner-left">
+					<img src="img/mono-logo.png" style="padding: 0; margin: 0; margin-top: 30px; height: 60px;"></img>
+					<h1>kuglanje u monu</h1>
+				</div>
+				<div class="container header-inner-right">
+					<div class="container header-inner-right-btn btn-1">
+						<img src="img/svg-icons/home.svg" style="width: 50px; height: 50px; margin-top: 10px;"></img>
+						<h3>Naslovnica</h3>
+					</div>
+					<div class="container header-inner-right-btn btn-2">
+						<img src="img/svg-icons/bowling.svg" style="width: 50px; height: 50px; margin-top: 10px;"></img>
+						<h3>O Bowlingu</h3>
+					</div>
+					<div class="container header-inner-right-btn btn-3">
+						<img src="img/svg-icons/info.svg" style="width: 50px; height: 50px; margin-top: 10px;"></img>
+						<h3>O nama</h3>
+					</div>
+				</div>
+			</div>
 		</div>
 	</header>
+	
+	<section>
+		<div class="container hero-container">
+			<div class="container hero-container-background">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="container hero-left-container">
+							<h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</h2>
+							<button type="button" id="opsirnije" class="btn opsirnije-btn">Opsirnije</button>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="container hero-right-container">
+							<h2>Life is like bowling ball. If you shoot it carefully you might get a strike!<br>- Phillipos -</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	
 	<section>
 		<div class="container body-container">
