header, hero, footer

--- a/mono/index.html
+++ b/mono/index.html
@@ -16,7 +16,7 @@
   
 	<header>
 		<div class="container header-container">
-			<div class="container header-center-container">
+			<div class="container header-container-background">
 				<div class="container header-inner-left">
 					<img src="img/mono-logo.png" style="padding: 0; margin: 0; margin-top: 30px; height: 60px;"></img>
 					<h1>kuglanje u monu</h1>
@@ -43,13 +43,13 @@
 		<div class="container hero-container">
 			<div class="container hero-container-background">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-6 hero-row">
 						<div class="container hero-left-container">
 							<h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</h2>
 							<button type="button" id="opsirnije" class="btn opsirnije-btn">Opsirnije</button>
 						</div>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 hero-row">
 						<div class="container hero-right-container">
 							<h2>Life is like bowling ball. If you shoot it carefully you might get a strike!<br>- Phillipos -</h2>
 						</div>
@@ -68,7 +68,29 @@
 	
 	<footer>
 		<div class="container footer-container">
-		
+			<div class="container footer-container-background">
+				<div class="row">
+					<div class="col-md-6 footer-row">
+						<div class="container footer-left-container">
+							<h1>pratite nas na društvenim mrežama</h1>
+							<img src="img/svg-icons/facebook.svg" style="width: 50px; height: 50px; margin-left: 50px; margin-top: 15px;"><h2>Facebook</h2></img>
+							<br><br>
+							<img src="img/svg-icons/instagram.svg" style="width: 50px; height: 50px; margin-left: 50px; margin-top: 15px;"><h2>Instagram</h2></img>
+						</div>
+					</div>
+					<div class="col-md-6 footer-row">
+						<div class="container footer-right-container">
+							<h1>podaci za kontakt</h1>
+							<h2>e-mail - marko.filipovic12i@gmail.com</h2>
+							<h2>adresa - bročice sv. mihovila 173, 44330 novska</h2>
+							<h2>kontakt broj - 099/768-8065</h2>
+						</div>
+					</div>
+					<div>
+						<h3>Copyright © 2017, All Rights Reserved</h3>
+					</div>
+				</div>
+			</div>
 		</div>
 	</footer>
 
