--- a/mono/index.html
+++ b/mono/index.html
@@ -23,15 +23,15 @@
 				</div>
 				<div class="container header-inner-right">
 					<div class="container header-inner-right-btn btn-1">
-						<img src="img/svg-icons/home.svg" style="width: 50px; height: 50px; margin-top: 10px;"></img>
+						<object class="naslovnica" type="image/svg+html" data="img/svg-icons/home.svg" style="width: 50px; height: 50px; margin-top: 10px;"></object>
 						<h3>Naslovnica</h3>
 					</div>
 					<div class="container header-inner-right-btn btn-2">
-						<img src="img/svg-icons/bowling.svg" style="width: 50px; height: 50px; margin-top: 10px;"></img>
+						<object class="obowlingu" type="image/svg+html" data="img/svg-icons/bowling.svg" style="width: 50px; height: 50px; margin-top: 10px;"></object>
 						<h3>O Bowlingu</h3>
 					</div>
 					<div class="container header-inner-right-btn btn-3">
-						<img src="img/svg-icons/info.svg" style="width: 50px; height: 50px; margin-top: 10px;"></img>
+						<object class="onama" type="image/svg+html" data="img/svg-icons/info.svg" style="width: 50px; height: 50px; margin-top: 10px;"></object>
 						<h3>O nama</h3>
 					</div>
 				</div>
