--- a/mono/index.html
+++ b/mono/index.html
@@ -61,7 +61,38 @@
 	
 	<section>
 		<div class="container body-container">
-		
+			<div class="container sec-main sec1">
+				<div class="container sec-1-nsl">
+					<h1>pet razloga zašto isprobati bowling</h1>
+				</div>
+				<div class="row">
+					<div class="col-md-6 sec-1-row-left">
+						<h2>- brzo se uci<br>- izrazito je drustvena igra<br>- jaca motoricke sposobnosti<br>- jaca koncentraciju<br>- utjece na ravnotezu</h2>
+					</div>
+					<div class="col-md-6 sec-1-row-right">
+						<h2>- sve sto ti treba je dobra volja, u nasem bowling centru imamo sve ostalo</h2>
+						<button type="button" id="pog-video" class="btn video-btn"><h3>Video</h3><object class="video-svg" type="image/svg+html" data="img/svg-icons/play.svg" style="width: 30px; height: 30px; margin-left: 10px; vertical-align: middle;"></object></button>
+					</div>
+				</div>
+			</div>
+			<div class="container sec-main sec2">
+				<div class="container sec-2-nsl">
+					<h1>i mnoge hollywoodske zvijezde kuglaju</h1>
+				</div>
+			</div>
+			<div class="container sec-main sec3">
+				<div class="container sec-3-nsl">
+					<h1>škola kuglanja</h1>
+				</div>
+			</div>
+			<div class="container sec-main sec4">
+				
+			</div>
+			<div class="container sec-main sec5">
+				<div class="container sec-5-nsl">
+					<h1>pogledaj kako izgleda kuglanje</h1>
+				</div>
+			</div>
 		</div>
 	</section>
 	
