--- a/mono/index.html
+++ b/mono/index.html
@@ -79,18 +79,121 @@
 				<div class="container sec-2-nsl">
 					<h1>i mnoge hollywoodske zvijezde kuglaju</h1>
 				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-4 sec-2-col">
+							<img src="img/lice1.jpg" style="border-radius: 50%; width: 150px; height: 150px;"></img>
+							<h2>Charlie Sheen</h2>
+							<h3>“Ma koliko god izgleda lagano, teže je nego što mislite. Dodite i probajte.”</h3>
+						</div>
+						<div class="col-md-4 sec-2-col">
+							<img src="img/lice2.jpg" style="border-radius: 50%; width: 150px; height: 150px;"></img>
+							<h2>Elle Fanning</h2>
+							<h3>“Prvi puta me odvela prijateljica, kasnije sam počela trenirati redovito. Prepourčam svakome.”</h3>
+						</div>
+						<div class="col-md-4 sec-2-col">
+							<img src="img/lice3.jpg" style="border-radius: 50%; width: 150px; height: 150px;"></img>
+							<h2>Kevin Hart</h2>
+							<h3>“Kuglanje mi je kao ispušni ventil nakon napornih nastupa. Zanimljiv sport, razlikuje se od ostalih.”</h3>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="container sec-main sec3">
 				<div class="container sec-3-nsl">
 					<h1>škola kuglanja</h1>
 				</div>
+				<div class="container sec-3-text">
+					<h2>- organiziramo i skolu kuglanja koja traje ponedjeljkom, srijedom i petkom u vremenu od 16h-20h<br><br>- nas bowling klub ima dva certificirana trenera od strane ETBF-a (Europian tenpin bowling federation)<br><br>- nasi treneri vode skolu bowlinga za pocetnike – i za djecu i za odrasle</h2>
+				</div>
 			</div>
 			<div class="container sec-main sec4">
-				
+				<div class="row">
+					<div class="col-md-6">
+						<div class="container sec-4-left-bg">
+							<h2>prijavite se za školu kuglanja</h2>
+							<form>
+							<div class="form-group">
+								<label for="ime-prezime"><h3>Vaše ime i prezime</h3></label>
+								<input type="text" class="form-control" id="ime-prezime">
+							</div>
+							<div class="form-group">
+								<label for="e-mail"><h3>Email addresa</h3></label>
+								<input type="email" class="form-control" id="e-mail">
+							</div>
+							<div class="form-group">
+								<label for="broj"><h3>Kontakt broj</h3></label>
+								<input type="number" class="form-control" id="broj">
+							</div>
+							<div class="container radio-form">
+								<div class="form-check">
+									<label class="form-check-label">
+										<h4>Djeca (do 16 godina)</h4>
+										<input class="form-check-input form-radio-main" type="radio" name="exampleRadios" id="opt1" value="option1" checked>
+									</label>
+									</div>
+								<div class="form-check">
+									<label class="form-check-label">
+										<h4>Mladi (do 26 godina)</h4>
+										<input class="form-check-input form-radio-main" type="radio" name="exampleRadios" id="opt2" value="option2">
+									</label>
+								</div>
+								<div class="form-check">
+									<label class="form-check-label">
+										<h4>Stariji (od 26 godina)</h4>
+										<input class="form-check-input form-radio-main" type="radio" name="exampleRadios" id="opt3" value="option3">
+									</label>
+								</div>
+							</div>
+							</form>
+							<button type="submit" class="btn sec-4-btn sec-4-btn-left"><object class="video-svg" type="image/svg+html" data="img/svg-icons/signin.svg" style="width: 20px; height: 20px; margin-right: 10px; vertical-align: middle;"></object>Prijavi se</button>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="container sec-4-right-bg">
+							<h2>pretplatite se na newsletter</h2>
+							<form>
+							<div class="form-group">
+								<label for="ime-prezime"><h3>Vaše ime</h3></label>
+								<input type="text" class="form-control" id="ime-prezime-news">
+							</div>
+							<div class="form-group">
+								<label for="e-mail"><h3>Email addresa</h3></label>
+								<input type="email" class="form-control" id="e-mail-news">
+							</div>
+							<h3>O cemu zelite da Vas se obavijesti</h3>
+							<div class="form-check chc">
+								<label class="form-check-label">
+								<h4>Popusti</h4>
+								<input type="checkbox" class="form-check-input">
+								</label>
+							</div>
+							<div class="form-check chc">
+								<label class="form-check-label">
+								<h4>Novosti</h4>
+								<input type="checkbox" class="form-check-input">
+								</label>
+							</div>
+							</form>
+							<button type="submit" class="btn sec-4-btn sec-4-btn-right"><object class="video-svg" type="image/svg+html" data="img/svg-icons/email.svg" style="width: 20px; height: 20px; margin-right: 10px; vertical-align: middle;"></object>Pretplati se</button>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="container sec-main sec5">
 				<div class="container sec-5-nsl">
 					<h1>pogledaj kako izgleda kuglanje</h1>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-7 sec-5-col">
+							<h2>3 stvari na koje treba pripaziti</h2>
+							<h3>1. odabir i drzanje kugle<br>2. pravilno kuglanje<br>3. pravilan izbacaj</h3>						
+						</div>
+						<div class="col-md-5 sec-5-col">
+							<iframe src="http://www.youtube.com/embed/cwHRegcjasg" width="400" height="300" frameborder="0" style="margin-top: 40px;" allowfullscreen></iframe>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
