--- a/mono/index.html
+++ b/mono/index.html
@@ -16,7 +16,9 @@
 	<div class="container" id="popUpVideo">
 		<div class="container" id="innerPopUp">
 			<button type="button" class="btn btn-danger close-btn" onclick="sakVideo();">X</button>
-			<iframe src="http://www.youtube.com/embed/cwHRegcjasg" width="800" height="600" frameborder="0" style="padding: 0;" allowfullscreen></iframe>
+			<iframe src="http://www.youtube.com/embed/cwHRegcjasg" class="opnVideo" width="800" height="600" frameborder="0" style="padding: 0;" allowfullscreen></iframe>
+			<iframe src="http://www.youtube.com/embed/cwHRegcjasg" class="opnVideo-min" width="430" height="400" frameborder="0" style="padding: 0;" allowfullscreen></iframe>
+			<iframe src="http://www.youtube.com/embed/cwHRegcjasg" class="opnVideo-min-2" width="300" height="400" frameborder="0" style="padding: 0;" allowfullscreen></iframe>
 		</div>
 		<div class="container" id="opsPopUp">
 			<button type="button" class="btn btn-danger close-btn" onclick="sakOpsirnije();">X</button>
@@ -27,7 +29,9 @@
 		<div class="container header-container">
 			<div class="container header-container-background">
 				<div class="container header-inner-left">
-					<img src="img/mono-logo.png" style="padding: 0; margin: 0; margin-top: 30px; height: 60px;"></img>
+					<img src="img/mono-logo.png" class="header-logo" style="padding: 0; margin: 0; margin-top: 30px; height: 60px;"></img>
+					<img src="img/mono-logo.png" class="header-logo-min" style="padding: 0; margin: 0; margin-top: 5px; height: 50px;"></img>
+					<img src="img/mono-logo.png" class="header-logo-min-2" style="padding: 0; margin: 0; margin-top: 12.5px; height: 35px;"></img>
 					<h1>kuglanje u monu</h1>
 				</div>
 				<div class="container header-inner-right">
@@ -44,6 +48,22 @@
 						<h3>O nama</h3>
 					</div>
 				</div>
+				<div class="container header-inner-right-min">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					</div>
+					<div id="navbar" class="collapse navbar-collapse">
+						<ul class="nav navbar-nav">
+							<li onclick="naslovnica();"><a href="#">Naslovnica</a></li>
+							<li onclick="obowlingu();"><a href="#">O Bowlingu</a></li>
+							<li onclick="onama();"><a href="#">O nama</a></li>
+						</ul>
+					</div>
+				<div>
 			</div>
 		</div>
 		<script>
@@ -63,15 +83,15 @@
 		<div class="container hero-container">
 			<div class="container hero-container-background">
 				<div class="row">
-					<div class="col-md-6 hero-row">
-						<div class="container hero-left-container">
-							<h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</h2>
-							<button type="button" id="opsirnije" class="btn opsirnije-btn" onclick="pokOpsirnije();">Opsirnije</button>
-						</div>
-					</div>
-					<div class="col-md-6 hero-row">
+					<div class="col-sm-6 col-sm-push-6 hero-row">
 						<div class="container hero-right-container">
 							<h2>Life is like bowling ball. If you shoot it carefully you might get a strike!<br>- Phillipos -</h2>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-pull-6 hero-row">
+						<div class="container hero-left-container">
+							<h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</h2>
+							<button type="button" id="opsirnije" class="btn opsirnije-btn center-block" onclick="pokOpsirnije();">Opsirnije</button>
 						</div>
 					</div>
 				</div>
@@ -152,41 +172,43 @@
 					<div class="col-md-6">
 						<div class="container sec-4-left-bg">
 							<h2>prijavite se za školu kuglanja</h2>
-							<form id="optSel">
-							<div class="form-group">
-								<label for="ime-prezime"><h3>Vaše ime i prezime</h3></label>
-								<input type="text" class="form-control" id="ime-prezime">
-							</div>
-							<div class="form-group">
-								<label for="e-mail"><h3>Email addresa</h3></label>
-								<input type="email" class="form-control" id="e-mail">
-							</div>
-							<div class="form-group">
-								<label for="broj"><h3>Kontakt broj</h3></label>
-								<input type="number" class="form-control" id="broj">
-							</div>
-							<div class="container radio-form">
-								<div class="form-check">
-									<label class="form-check-label">
-										<h4>Djeca (do 16 godina)</h4>
-										<input class="form-check-input form-radio-main" type="radio" name="izbor" id="opt1" value="Djeca (do 16 godina)" checked>
-									</label>
+							<div class="container form-cont">
+								<form id="optSel">
+								<div class="form-group">
+									<label for="ime-prezime"><h3>Vaše ime i prezime</h3></label>
+									<input type="text" class="form-control" id="ime-prezime">
+								</div>
+								<div class="form-group">
+									<label for="e-mail"><h3>Email addresa</h3></label>
+									<input type="email" class="form-control" id="e-mail">
+								</div>
+								<div class="form-group">
+									<label for="broj"><h3>Kontakt broj</h3></label>
+									<input type="number" class="form-control" id="broj">
+								</div>
+								<div class="container radio-form">
+									<div class="form-check">
+										<label class="form-check-label">
+											<h4>Djeca (do 16 godina)</h4>
+											<input class="form-check-input form-radio-main" type="radio" name="izbor" id="opt1" value="Djeca (do 16 godina)" checked>
+										</label>
+										</div>
+									<div class="form-check">
+										<label class="form-check-label">
+											<h4>Mladi (do 26 godina)</h4>
+											<input class="form-check-input form-radio-main" type="radio" name="izbor" id="opt2" value="Mladi (do 26 godina)">
+										</label>
 									</div>
-								<div class="form-check">
-									<label class="form-check-label">
-										<h4>Mladi (do 26 godina)</h4>
-										<input class="form-check-input form-radio-main" type="radio" name="izbor" id="opt2" value="Mladi (do 26 godina)">
-									</label>
+									<div class="form-check">
+										<label class="form-check-label">
+											<h4>Stariji (od 26 godina)</h4>
+											<input class="form-check-input form-radio-main" type="radio" name="izbor" id="opt3" value="Stariji (od 26 godina)">
+										</label>
+									</div>
 								</div>
-								<div class="form-check">
-									<label class="form-check-label">
-										<h4>Stariji (od 26 godina)</h4>
-										<input class="form-check-input form-radio-main" type="radio" name="izbor" id="opt3" value="Stariji (od 26 godina)">
-									</label>
-								</div>
+								</form>
 							</div>
-							</form>
-							<button type="submit" class="btn sec-4-btn sec-4-btn-left" onclick="skola();"><object class="video-svg" type="image/svg+html" data="img/svg-icons/signin.svg" style="width: 20px; height: 20px; margin-right: 10px; vertical-align: middle;"></object>Prijavi se</button>
+							<button type="submit" class="btn sec-4-btn center-block sec-4-btn-left" onclick="skola();"><object class="video-svg" type="image/svg+html" data="img/svg-icons/signin.svg" style="width: 20px; height: 20px; margin-right: 10px; vertical-align: middle;"></object>Prijavi se</button>
 						</div>
 					</div>
 					<script>
@@ -215,30 +237,32 @@
 					<div class="col-md-6">
 						<div class="container sec-4-right-bg">
 							<h2>pretplatite se na newsletter</h2>
-							<form>
-							<div class="form-group">
-								<label for="ime-prezime"><h3>Vaše ime</h3></label>
-								<input type="text" class="form-control" id="ime-prezime-news">
+							<div class="container form-cont">
+								<form>
+								<div class="form-group">
+									<label for="ime-prezime"><h3>Vaše ime</h3></label>
+									<input type="text" class="form-control" id="ime-prezime-news">
+								</div>
+								<div class="form-group">
+									<label for="e-mail"><h3>Email addresa</h3></label>
+									<input type="email" class="form-control" id="e-mail-news">
+								</div>
+								<h3>O cemu zelite da Vas se obavijesti</h3>
+								<div class="form-check chc">
+									<label class="form-check-label">
+									<h4>Popusti</h4>
+									<input type="checkbox" class="form-check-input" name="chcbox" value="Popusti">
+									</label>
+								</div>
+								<div class="form-check chc">
+									<label class="form-check-label">
+									<h4>Novosti</h4>
+									<input type="checkbox" class="form-check-input" name="chcbox" value="Novosti">
+									</label>
+								</div>
+								</form>
 							</div>
-							<div class="form-group">
-								<label for="e-mail"><h3>Email addresa</h3></label>
-								<input type="email" class="form-control" id="e-mail-news">
-							</div>
-							<h3>O cemu zelite da Vas se obavijesti</h3>
-							<div class="form-check chc">
-								<label class="form-check-label">
-								<h4>Popusti</h4>
-								<input type="checkbox" class="form-check-input" name="chcbox" value="Popusti">
-								</label>
-							</div>
-							<div class="form-check chc">
-								<label class="form-check-label">
-								<h4>Novosti</h4>
-								<input type="checkbox" class="form-check-input" name="chcbox" value="Novosti">
-								</label>
-							</div>
-							</form>
-							<button type="submit" class="btn sec-4-btn sec-4-btn-right" onclick="news();"><object class="video-svg" type="image/svg+html" data="img/svg-icons/email.svg" style="width: 20px; height: 20px; margin-right: 10px; vertical-align: middle;"></object>Pretplati se</button>
+							<button type="submit" class="btn sec-4-btn center-block sec-4-btn-right" onclick="news();"><object class="video-svg" type="image/svg+html" data="img/svg-icons/email.svg" style="width: 20px; height: 20px; margin-right: 10px; vertical-align: middle;"></object>Pretplati se</button>
 						</div>
 					</div>
 					<script>
@@ -275,7 +299,8 @@
 							<h3>1. odabir i drzanje kugle<br>2. pravilno kuglanje<br>3. pravilan izbacaj</h3>						
 						</div>
 						<div class="col-md-5 sec-5-col">
-							<iframe src="http://www.youtube.com/embed/cwHRegcjasg" width="400" height="300" frameborder="0" style="margin-top: 40px;" allowfullscreen></iframe>
+							<iframe src="http://www.youtube.com/embed/cwHRegcjasg" class="ytvideo" width="400" height="300" frameborder="0" style="margin-top: 40px;" allowfullscreen></iframe>
+							<iframe src="http://www.youtube.com/embed/cwHRegcjasg" class="ytvideo1" width="300" height="300" frameborder="0" style="margin-top: 40px;" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
@@ -291,9 +316,9 @@
 					<div class="col-md-6 footer-row">
 						<div class="container footer-left-container">
 							<h1>pratite nas na društvenim mrežama</h1>
-							<a href="http://www.facebook.com"><img src="img/svg-icons/facebook.svg" style="width: 50px; height: 50px; margin-left: 50px; margin-top: 15px;"><h2>Facebook</h2></img></a>
+							<a href="http://www.facebook.com"><object class="fbsvg" type="image/svg+html" data="img/svg-icons/facebook.svg" style="width: 50px; height: 50px; margin-left: 50px; margin-top: 15px; vertical-align: middle;"></object><object class="fbsvg-min" type="image/svg+html" data="img/svg-icons/facebook.svg" style="width: 30px; height: 30px; margin-left: 50px; margin-top: 15px; vertical-align: middle;"></object><h2>Facebook</h2></a>
 							<br><br>
-							<a href="https://www.instagram.com"><img src="img/svg-icons/instagram.svg" style="width: 50px; height: 50px; margin-left: 50px; margin-top: 15px;"><h2>Instagram</h2></img></a>
+							<a href="https://www.instagram.com"><object class="insvg" type="image/svg+html" data="img/svg-icons/instagram.svg" style="width: 50px; height: 50px; margin-left: 50px; margin-top: 15px; vertical-align: middle;"></object><object class="insvg-min" type="image/svg+html" data="img/svg-icons/instagram.svg" style="width: 30px; height: 30px; margin-left: 50px; margin-top: 15px; vertical-align: middle;"></object><h2>Instagram</h2></a>
 						</div>
 					</div>
 					<div class="col-md-6 footer-row">
